<resources>
    <string-array name="exchange_list_context_menu">
        <item name="calculate">Calculate</item>
        <item name="delete">Delete</item>
        <item name="update">Update</item>
    </string-array>
    <string-array name="chart_type">
        <item name="line">Line</item>
        <item name="bar">Bar</item>
        <item name="candle">Candle</item>
    </string-array>
    <string name="app_name">Huilvzhi</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_item">Add Item</string>
    <string name="action_edit_item">Edit Item</string>
    <string name="action_finish_item">Finish</string>
    <string name="action_about">About</string>
    <string name="action_tips">Tips</string>
    <string name="action_calculator">Calculator</string>
    <string name="action_historical_chart">Historical Data Chart</string>
    <string name="action_delete">Delete</string>
    <string name="action_update">Update</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="button_text_apply">Apply</string>
    <string name="button_text_ok">Ok</string>
    <string name="dialog_title_add_exchange_item">Add New Exchange Item</string>
    <string name="text_close">Close</string>
    <string name="info_about">HuiLvZhi 2014 JointCity All Rights Reserved </string>
    <string name="title_about">About</string>
    <string name="prompt_item_exist">has already exist!</string>
    <string name="text_double_press_quit">Press again to quit!</string>
    <string name="info_no_network">Network is down, please do it later !</string>
    <string name="info_no_rate">N/A</string>
    <string name="calculator_name">Calculator</string>
    <string name="historical_chart_name">Historical Chart</string>
    <string name="tips_name">Tips</string>
    <string name="text_calculator_one">1</string>
    <string name="text_calculator_two">2</string>
    <string name="text_calculator_three">3</string>
    <string name="text_calculator_four">4</string>
    <string name="text_calculator_five">5</string>
    <string name="text_calculator_six">6</string>
    <string name="text_calculator_seven">7</string>
    <string name="text_calculator_eight">8</string>
    <string name="text_calculator_nine">9</string>
    <string name="text_calculator_zero">0</string>
    <string name="text_calculator_equal">=</string>
    <string name="text_calculator_clear">Clear</string>
    <string name="text_calculator_dot">.</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_query">Query</string>
    <string name="prompt_delete_item">Are you sure to delete </string>
    <string name="title_delete_item">Delete</string>
    <string name="item_year">Year</string>
    <string name="item_month">Month</string>
    <string name="item_day">Day</string>
    <string name="na">N/A</string>
    <string name="chart_type_line">Line</string>
    <string name="chart_type_bar">Bar</string>
    <string name="chart_type_candle">Candle</string>
    <string name="prompt_invalid_rate">Invalid rate</string>
    <string name="united_arab_emirates">United Arab Emirates</string>
    <string name="afghanistan">Afghanistan</string>
    <string name="albania">Albania</string>
    <string name="armenia">Armenia</string>
    <string name="netherlands_antilles">Netherlands Antilles</string>
    <string name="angola">Angola</string>
    <string name="argentina">Argentina</string>
    <string name="australia">Australia</string>
    <string name="kiribati">Kiribati</string>
    <string name="nauru">Nauru</string>
    <string name="tuvalu">Tuvalu</string>
    <string name="aruba">Aruba</string>
    <string name="azerbaijan">Azerbaijan</string>
    <string name="bosnia_and_herzegovina">Bosnia And Herzegovina</string>
    <string name="barbados">Barbados</string>
    <string name="bangladesh">Bangladesh</string>
    <string name="bulgaria">Bulgaria</string>
    <string name="bahrain">Bahrain</string>
    <string name="burundi">Burundi</string>
    <string name="bermuda">Bermuda</string>
    <string name="brunei">Brunei</string>
    <string name="bolivia">Bolivia</string>
    <string name="brazil">Brazil</string>
    <string name="bahamas">Bahamas</string>
    <string name="bhutan">Bhutan</string>
    <string name="botswana">Botswana</string>
    <string name="belarus">Belarus</string>
    <string name="belize">Belize</string>
    <string name="canada">Canada</string>
    <string name="congo_kinshasa">Congo Kinshasa</string>
    <string name="liechtenstein">Liechtenstein</string>
    <string name="switzerland">Switzerland</string>
    <string name="chile">Chile</string>
    <string name="china">China</string>
    <string name="colombia">Colombia</string>
    <string name="costa_rica">Costa Rica</string>
    <string name="cuba">Cuba</string>
    <string name="cape_verde">Cape Verde</string>
    <string name="czech_republic">Czech Republic</string>
    <string name="djibouti">Djibouti</string>
    <string name="denmark">Denmark</string>
    <string name="greenland">Greenland</string>
    <string name="dominican_republic">Dominican Republic</string>
    <string name="algeria">Algeria</string>
    <string name="ecuador">Ecuador</string>
    <string name="egypt">Egypt</string>
    <string name="eritrea">Eritrea</string>
    <string name="ethiopia">Ethiopia</string>
    <string name="andorra">Andorra</string>
    <string name="austria">Austria</string>
    <string name="belgium">Belgium</string>
    <string name="cyprus">Cyprus</string>
    <string name="estonia">Estonia</string>
    <string name="european_union">European Union</string>
    <string name="finland">Finland</string>
    <string name="france">France</string>
    <string name="germany">Germany</string>
    <string name="greece">Greece</string>
    <string name="guadeloupe">Guadeloupe</string>
    <string name="ireland">Ireland</string>
    <string name="italy">Italy</string>
    <string name="luxembourg">Luxembourg</string>
    <string name="malta">Malta</string>
    <string name="martinique">Martinique</string>
    <string name="monaco">Monaco</string>
    <string name="montenegro">Montenegro</string>
    <string name="netherlands">Netherlands</string>
    <string name="portugal">Portugal</string>
    <string name="san_marino">San Marino</string>
    <string name="slovakia">Slovakia</string>
    <string name="slovenia">Slovenia</string>
    <string name="spain">Spain</string>
    <string name="vatican">Vatican</string>
    <string name="fiji">Fiji</string>
    <string name="isle_of_man">Isle Of Man</string>
    <string name="jersey">Jersey</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="georgia">Georgia</string>
    <string name="guernsey">Guernsey</string>
    <string name="ghana">Ghana</string>
    <string name="gibraltar">Gibraltar</string>
    <string name="gambia">Gambia</string>
    <string name="guinea">Guinea</string>
    <string name="guinea_bissau">Guinea Bissau</string>
    <string name="guyana">Guyana</string>
    <string name="hong_kong">Hong Kong</string>
    <string name="honduras">Honduras</string>
    <string name="croatia">Croatia</string>
    <string name="haiti">Haiti</string>
    <string name="hungary">Hungary</string>
    <string name="indonesia">Indonesia</string>
    <string name="israel">Israel</string>
    <string name="india">India</string>
    <string name="iraq">Iraq</string>
    <string name="iran">Iran</string>
    <string name="iceland">Iceland</string>
    <string name="jamaica">Jamaica</string>
    <string name="jordan">Jordan</string>
    <string name="japan">Japan</string>
    <string name="kenya">Kenya</string>
    <string name="kyrgyzstan">Kyrgyzstan</string>
    <string name="cambodia">Cambodia</string>
    <string name="comoros">Comoros</string>
    <string name="north_korea">North Korea</string>
    <string name="south_korea">South Korea</string>
    <string name="kuwait">Kuwait</string>
    <string name="cayman_islands">Cayman Islands</string>
    <string name="kazakhstan">Kazakhstan</string>
    <string name="laos">Laos</string>
    <string name="lebanon">Lebanon</string>
    <string name="sri_lanka">Sri Lanka</string>
    <string name="liberia">Liberia</string>
    <string name="lesotho">Lesotho</string>
    <string name="lithuania">Lithuania</string>
    <string name="latvia">Latvia</string>
    <string name="libya">Libya</string>
    <string name="morocco">Morocco</string>
    <string name="western_sahara">Western Sahara</string>
    <string name="moldova">Moldova</string>
    <string name="madagascar">Madagascar</string>
    <string name="macedonia">Macedonia</string>
    <string name="myanmar">Myanmar</string>
    <string name="mongolia">Mongolia</string>
    <string name="mauritania">Mauritania</string>
    <string name="mauritius">Mauritius</string>
    <string name="maldives">Maldives</string>
    <string name="malawi">Malawi</string>
    <string name="mexico">Mexico</string>
    <string name="malaysia">Malaysia</string>
    <string name="mozambique">Mozambique</string>
    <string name="namibia">Namibia</string>
    <string name="nigeria">Nigeria</string>
    <string name="nicaragua">Nicaragua</string>
    <string name="norway">Norway</string>
    <string name="nepal">Nepal</string>
    <string name="cook_islands">Cook Islands</string>
    <string name="new_zealand">New Zealand</string>
    <string name="oman">Oman</string>
    <string name="panama">Panama</string>
    <string name="peru">Peru</string>
    <string name="papua_new_guinea">Papua New Guinea</string>
    <string name="philippines">Philippines</string>
    <string name="pakistan">Pakistan</string>
    <string name="poland">Poland</string>
    <string name="paraguay">Paraguay</string>
    <string name="qatar">Qatar</string>
    <string name="guatemala">Guatemala</string>
    <string name="romania">Romania</string>
    <string name="serbia">Serbia</string>
    <string name="russian_federation">Russian Federation</string>
    <string name="rwanda">Rwanda</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="solomon_islands">Solomon Islands</string>
    <string name="seychelles">Seychelles</string>
    <string name="sudan">Sudan</string>
    <string name="sweden">Sweden</string>
    <string name="singapore">Singapore</string>
    <string name="sierra_leone">Sierra Leone</string>
    <string name="somalia">Somalia</string>
    <string name="suriname">Suriname</string>
    <string name="sao_tome_and_principe">Sao Tome And Principe</string>
    <string name="el_salvador">El Salvador</string>
    <string name="syria">Syria</string>
    <string name="swaziland">Swaziland</string>
    <string name="thailand">Thailand</string>
    <string name="tajikistan">Tajikistan</string>
    <string name="turkmenistan">Turkmenistan</string>
    <string name="tunisia">Tunisia</string>
    <string name="tonga">Tonga</string>
    <string name="turkey">Turkey</string>
    <string name="trinidad_and_tobago">Trinidad And Tobago</string>
    <string name="taiwan">Taiwan</string>
    <string name="tanzania">Tanzania</string>
    <string name="ukraine">Ukraine</string>
    <string name="uganda">Uganda</string>
    <string name="american_samoa">American Samoa</string>
    <string name="guam">Guam</string>
    <string name="marshall_islands">Marshall Islands</string>
    <string name="micronesia">Micronesia</string>
    <string name="palau">Palau</string>
    <string name="puerto_rico">Puerto Rico</string>
    <string name="turks_and_caicos_islands">Turks And Caicos Islands</string>
    <string name="united_states_of_america">United States Of America</string>
    <string name="virgin_islands_british">Virgin Islands British</string>
    <string name="virgin_islands_us">Virgin Islands Us</string>
    <string name="uruguay">Uruguay</string>
    <string name="uzbekistan">Uzbekistan</string>
    <string name="venezuela">Venezuela</string>
</resources>