<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4b4b4b"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textview_code"
            style="@style/calculatorTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textview_rate"
            style="@style/calculatorTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/textview_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:background="@drawable/calculator_result_textview"
        android:gravity="right|center_vertical"
        android:maxLines="10"
        android:scrollHorizontally="false"
        android:text="0"
        android:textSize="35sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="#4b4b4b" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button_one"
                style="@style/calculatorButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/text_calculator_one" />

            <Button
                android:id="@+id/button_two"
                style="@style/calculatorButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/text_calculator_two" />

            <Button
                android:id="@+id/button_three"
                style="@style/calculatorButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/text_calculator_three" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button_four"
                style="@style/calculatorButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/text_calculator_four" />

            <Button
                android:id="@+id/button_five"
                style="@style/calculatorButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/text_calculator_five" />

            <Button
                android:id="@+id/button_six"
                style="@style/calculatorButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/text_calculator_six" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button_seven"
                style="@style/calculatorButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/text_calculator_seven" />

            <Button
                android:id="@+id/button_eight"
                style="@style/calculatorButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/text_calculator_eight" />

            <Button
                android:id="@+id/button_nine"
                style="@style/calculatorButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/text_calculator_nine" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button_zero"
                style="@style/calculatorButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/text_calculator_zero" />

            <Button
                android:id="@+id/button_dot"
                style="@style/calculatorButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/text_calculator_dot" />

            <Button
                android:id="@+id/button_equal"
                style="@style/calculatorButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/text_calculator_equal" />
        </TableRow>
    </TableLayout>

</LinearLayout>